--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clsx": "^2.1.1",
     "next": "14.2.31",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.21",
